# SnipeBot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: README.md  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 20260413_0001_timescale_price_checks.py  20260413_0002_timescale_compat_schema.py  20260413_0003_add_watch_item_image_url.py
backend/src/snipebot/: main.py  worker.py
backend/src/snipebot/adapters/: __init__.py
backend/src/snipebot/adapters/sites/: __init__.py  aliexpress.py  amazon_nl.py  base.py  hema.py  parsing.py  registry.py
backend/src/snipebot/api/: __init__.py  deps.py  health.py  settings.py  watchlist.py
backend/src/snipebot/core/: config.py  metrics.py  rate_limit.py
backend/src/snipebot/domain/: __init__.py  alerts.py  price_checks.py  services.py  settings.py
backend/src/snipebot/notifications/: __init__.py  base.py  factory.py  models.py  noop.py  telegram.py
backend/src/snipebot/persistence/: __init__.py  db.py  models.py
backend/src/snipebot/scheduler/: __init__.py  runner.py
backend/tests/: test_adapters.py  test_alert_rules.py  test_db_smoke.py  test_health.py  test_price_check_worker.py  test_site_detection.py  test_telegram_notifier.py  test_url_normalization.py  test_watchlist.py
backend/tests/fixtures/: hema_product_page_fixture.html
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.test.tsx  App.tsx  styles.css
infra/docker/: backend.Dockerfile  (+1 more)
openspec/: config.yaml
(+42 files in other folders)
